Configuring syncope building env.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,57 +1,20 @@
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 language: java
 os: linux
 dist: bionic
 arch: amd64
 jdk:
   - openjdk11
-cache:
-  bundler: false
-  cargo: false
-  directories:
-    - '$HOME/.m2'
-git:
-  depth: 2
-env:
-  global:
-  - MAVEN_OPTS="-Xmx4096M -Xss128M -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -noverify"
-  - DBMS=H2
-  - jaxrsContentType=application/json
-  - TestCommand="mvn -pl common -U -T 1C clean test -Dtest=PitTest -Dinvoker.streamLogs=true -Dmodernizer.skip=true -Dianal.skip=true -Drat.skip=true -Dcheckstyle.skip=true -Dsass.skip=true"
-before_install:
-- wget https://github.com/sormuras/bach/raw/master/install-jdk.sh -O ~/install-jdk.sh && chmod +x ~/install-jdk.sh
+# SKipping entirely the automatic install phase done by travis
 install: true
-notifications:
-  email:
-    - dev@syncope.apache.org
-stages:
-  - build
-  - validate
-  - test
-jobs:
-  include:
-    - stage: build
-      name: "Build"
-      script: mvn -U --quiet -T 1C -P skipTests,all
-      #######################################################
-    - stage: validate
-      name: "Checkstyle, Legal Files, Modernizer and Release Audit Tool (RAT) Analysis"
-      script: mvn -T 1C checkstyle:check ianal:verify-legal-files modernizer:modernizer apache-rat:check
-      ######################################################
-    - stage: test
-      name: "Unit Tests via JDK 11"
-      script: eval $TestCommand
+
+# Skip automatic git pull of all submodules
+git:
+  submodules: false
+
+addons:
+  sonarcloud:
+    organization: "ultrale"
+    token: 098c7f3422de05765d72563d487b0da92a6c6dcc
+
+script:
+  - mvn clen -pl .,common/am/lib -U -T 1C -Dtest=org.apache.syncope.common.lib.*Test -Dinvoker.streamLogs=true -Dmodernizer.skip=true -Dianal.skip=true -Drat.skip=true -Dcheckstyle.skip=true -Dsass.skip=true -DfailIfNoTests=false org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=UltraLe_syncope
