--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ addons:
     token: 098c7f3422de05765d72563d487b0da92a6c6dcc
 
 script:
-  #- mvn clean -q -pl .,common/am/lib -U -T 1C -Dtest=org.apache.syncope.common.lib.*Test -Dinvoker.streamLogs=true -Dmodernizer.skip=true -Dianal.skip=true -Drat.skip=true -Dcheckstyle.skip=true -Dsass.skip=true -DfailIfNoTests=false org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=UltraLe_syncope -Dsonar.scm.disabled=true -X
-  - mvn clean -q -Dtest=org.apache.syncope.common.lib.*Test org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=UltraLe_syncope -DfailIfNoTests=false -Dmodernizer.skip=true -Dianal.skip=true -Drat.skip=true -Dcheckstyle.skip=true -Dsass.skip=true
+  - mvn clean -q -pl common/am/lib -am -Dtest=PitTest -Dinvoker.streamLogs=true -Dmodernizer.skip=true -Dianal.skip=true -Drat.skip=true -Dcheckstyle.skip=true -Dsass.skip=true -DfailIfNoTests=false org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=UltraLe_syncope
+  #- mvn clean -q -Dtest=org.apache.syncope.common.lib.*Test org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=UltraLe_syncope -DfailIfNoTests=false -Dmodernizer.skip=true -Dianal.skip=true -Drat.skip=true -Dcheckstyle.skip=true -Dsass.skip=true
