Configuring syncope building env.

--- a/pom.xml
+++ b/pom.xml
@@ -2341,6 +2341,7 @@ under the License.
             </dependency>
           </dependencies>
           <configuration>
+            <skip>true</skip>
             <configLocation>${rootpom.basedir}/src/main/resources/org/apache/syncope/checkstyle.xml</configLocation>
             <targetJdk>${targetJdk}</targetJdk>
           </configuration>
