--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,18 @@
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 language: java
 os: linux
 dist: bionic
@@ -10,5 +25,31 @@ addons:
     organization: "ultrale"
     token: 098c7f3422de05765d72563d487b0da92a6c6dcc
 
-script:
-  - mvn -DfailIfNoTests=false -Dinvoker.streamLogs=true -Dmodernizer.skip=true -Dianal.skip=true -Drat.skip=true -Dcheckstyle.skip=true -Dsass.skip=true -DfailIfNoTests=false -q -pl common/am/lib -am -Dtest=PitTest test org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=UltraLe_syncope
+cache:
+  bundler: false
+  cargo: false
+  directories:
+    - '$HOME/.m2'
+git:
+  depth: 2
+env:
+  global:
+    - MAVEN_OPTS="-Xmx4096M -Xss128M -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -noverify"
+    - DBMS=H2
+    - jaxrsContentType=application/json
+    - TestCommand="mvn -U -T 1C clean -Dtest=org.apache.syncope.common.lib.*Test test -Dinvoker.streamLogs=true -Dmodernizer.skip=true -Dianal.skip=true -Drat.skip=true -Dcheckstyle.skip=true -Dsass.skip=true" -DfailIfNoTests=false org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=UltraLe_syncope
+before_install:
+  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh -O ~/install-jdk.sh && chmod +x ~/install-jdk.sh
+install: true
+stages:
+  - build
+  - test
+jobs:
+  include:
+    - stage: build
+      name: "Build"
+      script: mvn -U --quiet -T 1C -P skipTests,all
+      #######################################################
+    - stage: test
+      name: "Unit Tests via JDK 11"
+      script: eval $TestCommand
