--- a/common/idrepo/rest-api/pom.xml
+++ b/common/idrepo/rest-api/pom.xml
@@ -48,6 +48,20 @@ under the License.
       <artifactId>syncope-common-idrepo-lib</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- Solution to make junit tests AND jupiter ones-->
+    <!-- https://stackoverflow.com/questions/62552652/run-both-junit-4-and-junit5-with-maven-surefire-plugin-2020 -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.6.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   
   <build>
@@ -62,6 +76,37 @@ under the License.
             <id>attach-javadocs</id>
             <goals>
               <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- OVERRIVE maven surefire plugin in order to make junit tests AND jupiter ones-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+      </plugin>
+
+      <!-- Pitest mutation testing -->
+      <plugin>
+        <groupId>org.pitest</groupId>
+        <artifactId>pitest-maven</artifactId>
+        <version>1.5.2</version>
+        <!--FIX configs for mutation coverage -->
+        <configuration>
+          <targetClasses>
+            <param>org.apache.syncope.common.rest.api.batch.DeleteMePlease*</param>
+          </targetClasses>
+          <targetTests>
+            <param>org.apache.syncope.common.rest.api.batch.PitTest*</param>
+          </targetTests>
+        </configuration>
+        <!-- execution, qui inserire eventuali altri parametri -->
+        <executions>
+          <execution>
+            <goals>
+              <goal>mutationCoverage</goal>
             </goals>
           </execution>
         </executions>
