--- a/common/idrepo/rest-api/pom.xml
+++ b/common/idrepo/rest-api/pom.xml
@@ -67,6 +67,11 @@ under the License.
           <artifactId>mockito-core</artifactId>
           <scope>test</scope>
       </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-rs-client</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   
   <build>
