--- a/pom.xml
+++ b/pom.xml
@@ -2318,9 +2318,8 @@ under the License.
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <encoding>utf-8</encoding>
             <runOrder>alphabetical</runOrder>
-            <!-- Skkipping Integration tests for -->
-            <skip>true</skip>
-            <skipITs>true</skipITs>
+            <!-- Skkipping Integration tests
+            <skipITs>true</skipITs>-->
           </configuration>
           <executions>
             <execution>
